[ master ] - modify hyprland's keybroad repeat speed rate

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -106,6 +106,16 @@ input {
     }
 
     sensitivity = 0.5 # -1.0 - 1.0, 0 means no modification.
+
+    #
+    # The repeat rate for held-down keys, in repeats per second.	int	25
+    #
+    repeat_rate = 25
+
+    #
+    # Delay before a held-down key is repeated, in milliseconds.	int	600
+    #
+    repeat_delay = 300
 }
 
 
