[ master ] - Hyprland configuration fixed blur font issue.

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -69,7 +69,8 @@ $purple = d699b6
 #     - flipped + 270 degrees -> 7
 # -----------------------------------------------------------------------
 # monitor=HDMI-A-1,2560x1440@60,0x0,1
-monitor=HDMI-A-1,2560x1440@60,0x0,1,transform,2
+# monitor=HDMI-A-1,2560x1440@60,0x0,1,transform,2
+monitor=HDMI-A-1,preferred,auto,auto,transform,2
 
 
 # -----------------------------------------------------------------------
@@ -225,6 +226,10 @@ misc {
      force_default_wallpaper = -1 # Set to 0 to disable the anime mascot wallpapers
 }
 
+xwayland {
+    use_nearest_neighbor = false
+}
+
 
 # -----------------------------------------------------------------------
 # Mod key settings
@@ -240,7 +245,8 @@ $mainMod = SUPER
 # https://wiki.hyprland.org/Configuring/Binds/
 # -----------------------------------------------------------------------
 bind = $mainMod, RETURN, exec, alacritty
-bind = $mainMod, B, exec, GDK_DPI_SCALE=1.2 dbus-run-session brave > ~/temp/launch_brave_browser.log
+# bind = $mainMod, B, exec, GDK_DPI_SCALE=1.2 dbus-run-session brave > ~/temp/launch_brave_browser.log
+bind = $mainMod, B, exec, brave > ~/temp/launch_brave_browser.log
 bind = $mainMod, Q, killactive,
 # bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, emacs
