[ master ] - asashi-linux, disable all unneccesary default keybindings.

--- a/asahi-linux/hypr/configs/Keybinds.conf
+++ b/asahi-linux/hypr/configs/Keybinds.conf
@@ -15,44 +15,44 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod, F, fullscreen
 bind = $mainMod SHIFT, Q, closewindow, 
 bind = $mainMod CTRL, F, togglefloating,
-bind = $mainMod ALT, F, exec, hyprctl dispatch workspaceopt allfloat
+# bind = $mainMod ALT, F, exec, hyprctl dispatch workspaceopt allfloat
 bind = CTRL ALT, L, exec, $scriptsDir/LockScreen.sh
-bind = CTRL ALT, P, exec, $scriptsDir/Wlogout.sh
+# bind = CTRL ALT, P, exec, $scriptsDir/Wlogout.sh
 
 # FEATURES / EXTRAS
-bind = $mainMod, H, exec, $scriptsDir/KeyHints.sh # Small help file
-bind = $mainMod ALT, R, exec, $scriptsDir/Refresh.sh # Refresh waybar, swaync, rofi
-bind = $mainMod ALT, E, exec, $scriptsDir/RofiEmoji.sh # emoji
-bind = $mainMod SHIFT, B, exec, $scriptsDir/ChangeBlur.sh # Toggle blur settings 
-bind = $mainMod SHIFT, G, exec, $scriptsDir/GameMode.sh # animations ON/OFF
-bind = $mainMod ALT, K, exec, $scriptsDir/SwitchKeyboardLayout.sh # Switch Keyboard Layout
-bind = $mainMod ALT, L, exec, $scriptsDir/ChangeLayout.sh # Toggle Master or Dwindle Layout
-bind = $mainMod ALT, V, exec, $scriptsDir/ClipManager.sh # Clipboard Manager
-bind = $mainMod SHIFT, N, exec, swaync-client -t -sw # swayNC panel
+# bind = $mainMod, H, exec, $scriptsDir/KeyHints.sh # Small help file
+# bind = $mainMod ALT, R, exec, $scriptsDir/Refresh.sh # Refresh waybar, swaync, rofi
+# bind = $mainMod ALT, E, exec, $scriptsDir/RofiEmoji.sh # emoji
+# bind = $mainMod SHIFT, B, exec, $scriptsDir/ChangeBlur.sh # Toggle blur settings 
+# bind = $mainMod SHIFT, G, exec, $scriptsDir/GameMode.sh # animations ON/OFF
+# bind = $mainMod ALT, K, exec, $scriptsDir/SwitchKeyboardLayout.sh # Switch Keyboard Layout
+# bind = $mainMod ALT, L, exec, $scriptsDir/ChangeLayout.sh # Toggle Master or Dwindle Layout
+# bind = $mainMod ALT, V, exec, $scriptsDir/ClipManager.sh # Clipboard Manager
+# bind = $mainMod SHIFT, N, exec, swaync-client -t -sw # swayNC panel
 
 # FEATURES / EXTRAS (UserScripts)
-bind = $mainMod, E, exec, $UserScripts/QuickEdit.sh # Quick Edit Hyprland Settings
-bind = $mainMod SHIFT, M, exec, $UserScripts/RofiBeats.sh # online music
-bind = $mainMod, W, exec, $UserScripts/WallpaperSelect.sh # Select wallpaper to apply
-bind = CTRL ALT, W, exec, $UserScripts/WallpaperRandom.sh # Random wallpapers
+# bind = $mainMod, E, exec, $UserScripts/QuickEdit.sh # Quick Edit Hyprland Settings
+# bind = $mainMod SHIFT, M, exec, $UserScripts/RofiBeats.sh # online music
+# bind = $mainMod, W, exec, $UserScripts/WallpaperSelect.sh # Select wallpaper to apply
+# bind = CTRL ALT, W, exec, $UserScripts/WallpaperRandom.sh # Random wallpapers
 
 # Waybar / Bar related
-bind = $mainMod, B, exec, killall -SIGUSR1 waybar # Toggle hide/show waybar 
+# bind = $mainMod, B, exec, killall -SIGUSR1 waybar # Toggle hide/show waybar 
 bind = $mainMod CTRL, B, exec, $scriptsDir/WaybarStyles.sh # Waybar Styles Menu
-bind = $mainMod ALT, B, exec, $scriptsDir/WaybarLayout.sh # Waybar Layout Menu
+# bind = $mainMod ALT, B, exec, $scriptsDir/WaybarLayout.sh # Waybar Layout Menu
 
 # Master Layout
-bind = $mainMod CTRL, D, layoutmsg, removemaster
-bind = $mainMod, I, layoutmsg, addmaster
-bind = $mainMod, J, layoutmsg, cyclenext
-bind = $mainMod, K, layoutmsg, cycleprev
-bind = $mainMod, M, exec, hyprctl dispatch splitratio 0.3
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod CTRL, Return, layoutmsg, swapwithmaster
+# bind = $mainMod CTRL, D, layoutmsg, removemaster
+# bind = $mainMod, I, layoutmsg, addmaster
+# bind = $mainMod, J, layoutmsg, cyclenext
+# bind = $mainMod, K, layoutmsg, cycleprev
+# bind = $mainMod, M, exec, hyprctl dispatch splitratio 0.3
+# bind = $mainMod, P, pseudo, # dwindle
+# bind = $mainMod CTRL, Return, layoutmsg, swapwithmaster
 
 # group
-bind = $mainMod, G, togglegroup
-bind = ALT, tab, changegroupactive  #change focus to another window  
+# bind = $mainMod, G, togglegroup
+# bind = ALT, tab, changegroupactive  #change focus to another window  
 
 # Special Keys / Hot Keys
 bind = , xf86audioraisevolume, exec, $scriptsDir/Volume.sh --inc #volume up
@@ -71,14 +71,14 @@ bind = , xf86AudioPrev, exec, $scriptsDir/MediaCtrl.sh --prv
 bind = , xf86audiostop, exec, $scriptsDir/MediaCtrl.sh --stop
 
 # Screenshot keybindings NOTE: You may need to press Fn key as well
-bind = $mainMod, Print, exec, $scriptsDir/ScreenShot.sh --now
-bind = $mainMod SHIFT, Print, exec, $scriptsDir/ScreenShot.sh --area
-bind = $mainMod CTRL, Print, exec, $scriptsDir/ScreenShot.sh --in5 #screenshot in 5 secs
-bind = $mainMod ALT, Print, exec, $scriptsDir/ScreenShot.sh --in10 #screenshot in 10 secs
-bind = ALT, Print, exec, $scriptsDir/ScreenShot.sh --active #screenshot in 10 secs
+# bind = $mainMod, Print, exec, $scriptsDir/ScreenShot.sh --now
+# bind = $mainMod SHIFT, Print, exec, $scriptsDir/ScreenShot.sh --area
+# bind = $mainMod CTRL, Print, exec, $scriptsDir/ScreenShot.sh --in5 #screenshot in 5 secs
+# bind = $mainMod ALT, Print, exec, $scriptsDir/ScreenShot.sh --in10 #screenshot in 10 secs
+# bind = ALT, Print, exec, $scriptsDir/ScreenShot.sh --active #screenshot in 10 secs
 
 # screenshot with swappy (another screenshot tool)
-bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | swappy -f -
+# bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | swappy -f -
 
 # Resize windows
 # binde = $mainMod SHIFT, left, resizeactive,-50 0
@@ -99,12 +99,12 @@ bind = $mainMod SHIFT, k, movefocus, u
 bind = $mainMod SHIFT, j, movefocus, d
 
 # Workspaces related
-bind = $mainMod, tab, workspace, m+1
-bind = $mainMod SHIFT, tab, workspace, m-1
+# bind = $mainMod, tab, workspace, m+1
+# bind = $mainMod SHIFT, tab, workspace, m-1
 
 # Special workspace
-bind = $mainMod SHIFT, U, movetoworkspace, special
-bind = $mainMod, U, togglespecialworkspace,
+# bind = $mainMod SHIFT, U, movetoworkspace, special
+# bind = $mainMod, U, togglespecialworkspace,
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -147,10 +147,10 @@ bind = $mainMod SHIFT, bracketright, movetoworkspace, +1
 # bind = $mainMod CTRL, bracketright, movetoworkspacesilent, +1
 
 # Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
-bind = $mainMod, period, workspace, e+1
-bind = $mainMod, comma, workspace, e-1
+# bind = $mainMod, mouse_down, workspace, e+1
+# bind = $mainMod, mouse_up, workspace, e-1
+# bind = $mainMod, period, workspace, e+1
+# bind = $mainMod, comma, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
