--- a/asahi-linux/hypr/UserConfigs/UserKeybinds.conf
+++ b/asahi-linux/hypr/UserConfigs/UserKeybinds.conf
@@ -6,17 +6,15 @@
 # See also Laptops.conf for laptops keybinds 
 
 $mainMod = SUPER
-$files = thunar
 $term = alacritty
 $scriptsDir = $HOME/.config/hypr/scripts
 $UserScripts = $HOME/.config/hypr/UserScripts
 
 # rofi App launcher
 # bindr = $mainMod, $mainMod_L, exec, pkill rofi || rofi -show drun -modi drun,filebrowser,run,window
-bind = $mainMod, D, exec, pkill rofi || rofi -show drun -modi drun,filebrowser,run,window
+bind = ALT, D, exec, pkill rofi || rofi -show drun -modi drun,filebrowser,run,window
 
 bind = $mainMod, Return, exec, $term  # Launch terminal
-bind = $mainMod, T, exec, $files
 
 # User Added Keybinds
 bind = $mainMod SHIFT, O, exec, $UserScripts/ZshChangeTheme.sh # Change oh-my-zsh theme
