[ master ] - asashi-linux, Hyprland configuration disable rainbow borders and fixed miscs.

--- a/asahi-linux/hypr/UserConfigs/UserSettings.conf
+++ b/asahi-linux/hypr/UserConfigs/UserSettings.conf
@@ -9,28 +9,30 @@ source = $HOME/.cache/wal/colors-hyprland
 # blurls = waybar
 # blurls = rofi
 
-dwindle {
-  pseudotile = yes
-  preserve_split = yes
-  special_scale_factor = 0.8
-}
+#
+# Dark
+#
+$bg0 = 2d353b
+$fg = d3c6aa
+$purple = d699b6
 
 master {
-  new_is_master=1
-  new_on_top=1
-  mfact = 0.5
+  new_is_master = false
 }
 
 general {
-  sensitivity=1.00
+  # sensitivity=1.00
   apply_sens_to_raw=1
-  gaps_in = 4
-  gaps_out = 8
+  gaps_in = 5
+  gaps_out = 5
   border_size = 2
   resize_on_border = true
    
-  col.active_border = $color0 $color2 $color4 $color6 $color8 90deg
-  col.inactive_border = $backgroundCol
+  # col.active_border = $color0 $color2 $color4 $color6 $color8 90deg
+  # col.inactive_border = $backgroundCol
+
+  col.active_border = rgb($fg)
+  col.inactive_border = rgb($bg0)
 
   layout = master
 }
@@ -85,8 +87,10 @@ animations {
   animation = windowsIn, 1, 5, slow, popin
   animation = windowsOut, 1, 5, winOut, popin
   animation = windowsMove, 1, 5, wind, slide
-  animation = border, 1, 10, linear
-  animation = borderangle, 1, 180, linear, loop #used by rainbow borders and rotating colors
+  # animation = border, 1, 10, linear
+  # animation = borderangle, 1, 180, linear, loop #used by rainbow borders and rotating colors
+  animation = border, 1, 10, default
+  animation = borderangle, 1, 8, default
   animation = fade, 1, 5, overshot
   animation = workspaces, 1, 5, wind
   animation = windows, 1, 5, bounce, popin
@@ -98,8 +102,18 @@ input {
   kb_model=
   kb_options=caps:escape
   kb_rules=
-  repeat_rate=50
-  repeat_delay=300
+
+    sensitivity = 0.5 # -1.0 - 1.0, 0 means no modification.
+
+    #
+    # The repeat rate for held-down keys, in repeats per second.	int	25
+    #
+    repeat_rate = 25
+
+    #
+    # Delay before a held-down key is repeated, in milliseconds.	int	600
+    #
+    repeat_delay = 300
   numlock_by_default=1
   left_handed=0
   follow_mouse=1
