--- a/asahi-linux/hypr/UserConfigs/Startup_Apps.conf
+++ b/asahi-linux/hypr/UserConfigs/Startup_Apps.conf
@@ -32,7 +32,7 @@ exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
 
 # Rainbow borders
-exec-once = $UserScripts/RainbowBorders.sh
+# exec-once = $UserScripts/RainbowBorders.sh
 
 # sway-idle with lock only
 exec-once = swayidle -w timeout 900 '$lock'
