[ master ] - asashi-linux, Hyprland configuration fixed board color and disabled unnecessary startup apps.

--- a/asahi-linux/hypr/UserConfigs/Startup_Apps.conf
+++ b/asahi-linux/hypr/UserConfigs/Startup_Apps.conf
@@ -17,7 +17,7 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 # Polkit (Polkit Gnome / KDE)
-exec-once = $scriptsDir/Polkit.sh
+# exec-once = $scriptsDir/Polkit.sh
 
 # starup apps
 exec-once = waybar &
@@ -28,14 +28,14 @@ exec-once = swaync &
 
 
 #clipboard manager
-exec-once = wl-paste --type text --watch cliphist store 
-exec-once = wl-paste --type image --watch cliphist store
+# exec-once = wl-paste --type text --watch cliphist store 
+# exec-once = wl-paste --type image --watch cliphist store
 
 # Rainbow borders
 # exec-once = $UserScripts/RainbowBorders.sh
 
 # sway-idle with lock only
-exec-once = swayidle -w timeout 900 '$lock'
+# exec-once = swayidle -w timeout 300 '$lock'
 # sway-idle with lock and sleep
 #exec-once = swayidle -w timeout 900 '$lock' timeout 1200 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' before-sleep '$lock'
 # sway idle without lock
