--- a/asahi-linux/hypr/UserConfigs/UserSettings.conf
+++ b/asahi-linux/hypr/UserConfigs/UserSettings.conf
@@ -55,7 +55,7 @@ decoration {
   dim_inactive = true
   dim_strength = 0.1
 
-  drop_shadow=true
+  drop_shadow=false
   shadow_range=6
   shadow_render_power = 1
   col.shadow = $color2
