[ master ] - asashi-linux, Hyprland configuration added 'CMD + B' to launch FireFox.

--- a/asahi-linux/hypr/UserConfigs/UserKeybinds.conf
+++ b/asahi-linux/hypr/UserConfigs/UserKeybinds.conf
@@ -25,3 +25,5 @@ bind = $mainMod SHIFT, O, exec, $UserScripts/ZshChangeTheme.sh # Change oh-my-zs
 # to unbind
 #bind = $mainMod ALT, P, submap, reset
 #submap = reset
+
+bind = $mainMod, B, exec, dbus-run-session firefox > ~/temp/launch_firefox_browser.log
