[ master ] - asashi-linux, fixed touchpad sensitivity, and animation

--- a/asahi-linux/hypr/UserConfigs/UserKeybinds.conf
+++ b/asahi-linux/hypr/UserConfigs/UserKeybinds.conf
@@ -27,3 +27,4 @@ bind = $mainMod SHIFT, O, exec, $UserScripts/ZshChangeTheme.sh # Change oh-my-zs
 #submap = reset
 
 bind = $mainMod, B, exec, dbus-run-session firefox > ~/temp/launch_firefox_browser.log
+bind = $mainMod, E, exec, emacs
