--- a/asahi-linux/hypr/UserConfigs/UserSettings.conf
+++ b/asahi-linux/hypr/UserConfigs/UserSettings.conf
@@ -21,7 +21,7 @@ master {
 }
 
 general {
-  # sensitivity=1.00
+  sensitivity=0.50
   apply_sens_to_raw=1
   gaps_in = 5
   gaps_out = 5
@@ -71,29 +71,16 @@ decoration {
 }
     
 animations {
-  enabled = yes
+   enabled = yes
 
-  bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-  bezier = linear, 0.0, 0.0, 1.0, 1.0
-  bezier = wind, 0.05, 0.9, 0.1, 1.05
-  bezier = winIn, 0.1, 1.1, 0.1, 1.1
-  bezier = winOut, 0.3, -0.3, 0, 1
-  bezier = slow, 0, 0.85, 0.3, 1
-  bezier = overshot, 0.7, 0.6, 0.1, 1.1
-  bezier = bounce, 1.1, 1.6, 0.1, 0.85
-  bezier = sligshot, 1, -1, 0.15, 1.25
-  bezier = nice, 0, 6.9, 0.5, -4.20
-  
-  animation = windowsIn, 1, 5, slow, popin
-  animation = windowsOut, 1, 5, winOut, popin
-  animation = windowsMove, 1, 5, wind, slide
-  # animation = border, 1, 10, linear
-  # animation = borderangle, 1, 180, linear, loop #used by rainbow borders and rotating colors
-  animation = border, 1, 10, default
-  animation = borderangle, 1, 8, default
-  animation = fade, 1, 5, overshot
-  animation = workspaces, 1, 5, wind
-  animation = windows, 1, 5, bounce, popin
+   bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+
+   animation = windows, 1, 7, myBezier
+   animation = windowsOut, 1, 7, default, popin 80%
+   animation = border, 1, 10, default
+   animation = borderangle, 1, 8, default
+   animation = fade, 1, 7, default
+   animation = workspaces, 1, 6, default
 }
 
 input {
@@ -122,6 +109,7 @@ input {
   touchpad {
     disable_while_typing=1
     natural_scroll=1
+    scroll_factor=0.1
     clickfinger_behavior=0
     middle_button_emulation=1
     tap-to-click=1
