--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -245,8 +245,8 @@ $mainMod = SUPER
 # https://wiki.hyprland.org/Configuring/Binds/
 # -----------------------------------------------------------------------
 bind = $mainMod, RETURN, exec, alacritty
-# bind = $mainMod, B, exec, GDK_DPI_SCALE=1.2 dbus-run-session brave > ~/temp/launch_brave_browser.log
-bind = $mainMod, B, exec, brave > ~/temp/launch_brave_browser.log
+bind = $mainMod, B, exec, GDK_DPI_SCALE=1.2 dbus-run-session brave > ~/temp/launch_brave_browser.log
+# bind = $mainMod, B, exec, brave > ~/temp/launch_brave_browser.log
 bind = $mainMod, Q, killactive,
 # bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, emacs
