--- a/vm-fedora/hypr/hyprland.conf
+++ b/vm-fedora/hypr/hyprland.conf
@@ -70,7 +70,13 @@ $purple = d699b6
 # -----------------------------------------------------------------------
 # monitor=HDMI-A-1,2560x1440@60,0x0,1
 # monitor=HDMI-A-1,2560x1440@60,0x0,1,transform,2
-monitor=,2560x1600@60,0x0,1.8
+
+# MacBook Air Retina
+# monitor=,2560x1600@60,0x0,1.8
+
+# LG 4K
+# monitor=,3840x2160@60,0x0,1
+monitor=,2560x1600@60,0x0,1.2
 
 
 # -----------------------------------------------------------------------
