[ master ] - vm-fedora, update 'fedora_installation_guilde.org' and change hpyprland 'SUPER+B' to open 'brave-browser'.

--- a/vm-fedora/hypr/hyprland.conf
+++ b/vm-fedora/hypr/hyprland.conf
@@ -76,7 +76,7 @@ $purple = d699b6
 
 # LG 4K
 # monitor=,3840x2160@60,0x0,1
-monitor=,2560x1600@60,0x0,1.2
+monitor=,2560x1600@60,0x0,1.5
 
 
 # -----------------------------------------------------------------------
@@ -251,8 +251,8 @@ $mainMod = SUPER
 # https://wiki.hyprland.org/Configuring/Binds/
 # -----------------------------------------------------------------------
 bind = $mainMod, RETURN, exec, alacritty
-bind = $mainMod, B, exec, GDK_DPI_SCALE=1.2 MOZ_ENABLE_WAYLAND=1 dbus-run-session firefox > ~/temp/launch_brave_browser.log
-# bind = $mainMod, B, exec, brave > ~/temp/launch_brave_browser.log
+# bind = $mainMod, B, exec, GDK_DPI_SCALE=1.2 MOZ_ENABLE_WAYLAND=1 dbus-run-session brave-browser > ~/temp/launch_brave_browser.log
+bind = $mainMod, B, exec, dbus-run-session brave-browser > ~/temp/launch_brave_browser.log
 bind = $mainMod, Q, killactive,
 # bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, emacs
