--- a/asahi-linux/dot_alacritty.toml
+++ b/asahi-linux/dot_alacritty.toml
@@ -3,7 +3,7 @@
 # DygmaRise keyboard, replace all `Alt` to `Super`
 #
 
-import = ["/home/wison/.cache/wal/colors-alacritty.toml"]
+import = ["/home/fion/.cache/wal/colors-alacritty.toml"]
 
 [colors]
 draw_bold_text_with_bright_colors = true
