--- a/asahi-linux/dot_configs/hypr/hyprland.conf
+++ b/asahi-linux/dot_configs/hypr/hyprland.conf
@@ -107,6 +107,7 @@ input {
 
     touchpad {
         natural_scroll = true
+        scroll_factor = 0.2
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
@@ -242,7 +243,7 @@ $mainMod = SUPER
 # https://wiki.hyprland.org/Configuring/Binds/
 # -----------------------------------------------------------------------
 bind = $mainMod, RETURN, exec, alacritty
-bind = $mainMod, B, exec, GDK_DPI_SCALE=1.4 dbus-run-session brave-browser > ~/.launch_brave_browser.log
+bind = $mainMod, B, exec, GDK_DPI_SCALE=1.5 dbus-run-session brave-browser > ~/.launch_brave_browser.log
 # bind = $mainMod, B, exec, dbus-run-session brave-browser > ~/.launch_brave_browser.log
 bind = $mainMod, Q, killactive,
 # bind = $mainMod, M, exit,
@@ -288,6 +289,19 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
+#
+# Volume control
+#
+# bind = , XF86AudioMute, exec, echo "toggle mute" >> ~/temp/volume-control.log
+bind = , XF86AudioMute, exec, pamixer --toggle-mute
+bind = , XF86AudioLowerVolume, exec, pamixer --decrease 5
+bind = , XF86AudioRaiseVolume, exec, pamixer --increase 5
+
+#
+# Brightness control
+#
+bind = , XF86MonBrightnessDown, exec, ~/.config/hypr/set-brightness.sh decrease 5%
+bind = , XF86MonBrightnessUp, exec, ~/.config/hypr/set-brightness.sh increase 5%
 
 # -----------------------------------------------------------------------
 # per-device config
