[ master ] - fedora, update hyprland config: monitor resolution.

--- a/fedora/dot_configs/hypr/hyprland.conf
+++ b/fedora/dot_configs/hypr/hyprland.conf
@@ -40,9 +40,12 @@
 # monitor=,preferred,auto,1.333,transform,3
 
 # Parallels Retina
-monitor=Virtual-1,preferred,auto,0.8
+# monitor=Virtual-1,preferred,auto,0.8
 
-# Parallels Monitor
+# Parallels Monitor LG Dualup
+monitor=Virtual-1,2880x2560@60,auto,1.33
+
+# Parallels Monitor LG 4K
 # monitor=Virtual-1,2560x1440@60,auto,1.25
 
 
