[ master ] - freebsd_configs_x1_yoga, hyprland config added 'PrtSc' key to suspend.

--- a/freebsd_configs_x1_yoga/dot_configs/hypr/hyprland.conf
+++ b/freebsd_configs_x1_yoga/dot_configs/hypr/hyprland.conf
@@ -299,6 +299,11 @@ bind = , XF86AudioRaiseVolume, exec, pamixer --increase 5
 bind = , XF86MonBrightnessDown, exec, ~/.config/hypr/set-brightness.sh decrease 10
 bind = , XF86MonBrightnessUp, exec, ~/.config/hypr/set-brightness.sh increase 10
 
+#
+# Suspend
+#
+bind = , SunPrint_Screen, exec, doas zzz
+
 
 # -----------------------------------------------------------------------
 # per-device config
