--- a/arch_thinkpad/dot_config/hypr/hyprland.conf
+++ b/arch_thinkpad/dot_config/hypr/hyprland.conf
@@ -281,18 +281,19 @@ $mainMod = ALT
 # Launch apps
 #
 bind = $mainMod, RETURN, exec, alacritty
-bind = $mainMod, B, exec, GDK_DPI_SCALE=1.4 dbus-run-session brave > ~/temp/launch_brave_browser.log
+bind = $mainMod, B, exec, GDK_DPI_SCALE=1.8 dbus-run-session brave > ~/temp/launch_brave_browser.log
 # bind = $mainMod, B, exec, dbus-run-session brave > ~/temp/launch_brave_browser.log
 # bind = $mainMod, B, exec, dbus-run-session qutebrowser > ~/.launch_qute_browser.log
 bind = $mainMod, Q, killactive,
 # bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, emacs
 bind = $mainMod  CTRL, F, togglefloating
 bind = $mainMod, F, fullscreen
 bind = $mainMod, M, layoutmsg, swapwithmaster
 bind = $mainMod CTRL, P, exec, grim
 bind = CTRL&SUPER, P, exec, grim -g "$(slurp)"
 bind = $mainMod, P, exec, nsxiv ~/Photos/wallpaper/my-favorite 
+bind = $mainMod, O, exec, GDK_SCALE=1.8 obsidian
+bind = $mainMod, E, exec, QT_SCALE_FACTOR=1.8 eudic
 
 #
 # Move focus with mainMod + arrow keys
